# AI-Agent-RAG-pipeline

./: .gitignore  Chat_Engine.py  README.md  main.py  main_arc.py  pyproject.toml
custom_logger/: __init__.py  logger.py
evaluations/: langsmitheval.ipynb  rag_eval.py
exception_handler/: agent_exceptions.py
notebooks/: experiment.ipynb  prototype.ipynb  vector_service.ipynb  weather_tool.ipynb
pages/: 1_About.py
src/config/: config.yaml
src/prompt_library/: system_prompt.py
src/tools/rag_agent/: document_chat.py  document_loader.py  retriever.py  schemas.py
src/tools/wheather_agent/: schemas.py
src/utils/: config_loader.py  model_loader.py
src/workflow/: agent_workflow.py
tests/: test_agent.py  test_agent_rag.py  test_weather_api.py
vector_store/: meta.json
vector_store/collection/demo-collection/: storage.sqlite
vector_store/collection/second-collection/: storage.sqlite
