[project]
name = "AI-Agent-RAG-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "ipykernel>=7.1.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.2",
    "langsmith[pytest]>=0.4.42",
    "markdown>=3.10",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "pymupdf>=1.26.6",
    "pyowm>=3.5.0",
    "pypdf2>=3.0.1",
    "pytest>=9.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "streamlit>=1.51.0",
    "structlog>=25.5.0",
    "unstructured>=0.18.18",
]
